--- a/store/templates/books.html
+++ b/store/templates/books.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-{{ books.first.title }}
-</body>
-</html>
+{% extends "base.html" %}
+{% block title %} Student Page{% endblock %}
+{% block body %}
+
+{% for b in books %}
+    {{ b.title }}
+{% empty %}
+ No Books in the List
+{% endfor %}
+
+{% endblock %}
