--- a/store/templates/books.html
+++ b/store/templates/books.html
@@ -1,11 +1,33 @@
 {% extends "base.html" %}
 {% block title %} Student Page{% endblock %}
 {% block body %}
-
+<div class="row">
 {% for b in books %}
-    {{ b.title }}
+          <div class="col s12 m6">
+
+        <div class="card horizontal">
+          <div class="card-image">
+            <img src="{{b.cover.url}}" >
+          </div>
+          <div class="card-stacked">
+            <div class="card-content">
+                <p>{{b.title}}</p>
+                <p>{{b.publish_date}}</p>
+                <p>{{b.author}}</p>
+                <p></p>
+            </div>
+            <div class="card-action">
+                <p>
+                  <input type="checkbox" class="filled-in" id="filled-in-box" checked="checked" />
+                  <label for="filled-in-box">Follw</label>
+                </p>
+            </div>
+          </div>
+        </div>
+      </div>
 {% empty %}
  No Books in the List
 {% endfor %}
+</div>
 
 {% endblock %}
