--- a/store/templates/authors.html
+++ b/store/templates/authors.html
@@ -2,33 +2,34 @@
 {% block title %}BookStore{% endblock %}
 {% block body %}
 
-    <div class="row">
+   <div class="ui link cards">
     {% for a in authors %}
 
 
-      <div class="col s12 m6">
 
-        <div class="card horizontal">
-          <div class="card-image">
-            <img src="{{a.image.url}}" >
-          </div>
-          <div class="card-stacked">
-            <div class="card-content">
-                <p>{{a.name}}</p>
-                <p>{{a.country}}</p>
-                <p>{{a.dob}}</p>
-                <p>{{a.}}</p>
+          <div class="card">
+            <div class="image">
+              <img src="{{a.image.url}}">
             </div>
-            <div class="card-action">
-                <p>
-                  <input type="checkbox" class="filled-in" id="filled-in-box" checked="checked" />
-                  <label for="filled-in-box">Follw</label>
-                </p>
+            <div class="content">
+              <div class="header">{{a.name}}</div>
+              <div class="meta">
+                <a>Friends</a>
+              </div>
+              <div class="description">
+                Matthew is an interior designer living in New York.
+              </div>
+            </div>
+            <div class="extra content">
+              <span class="right floated">
+                Joined in 2013
+              </span>
+              <span>
+                <i class="user icon"></i>
+                75 Friends
+              </span>
             </div>
           </div>
-        </div>
-      </div>
-
 
     {% empty %}
          No authors in the List
