--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -3,20 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title> {%  block title  %} Default title {% endblock %}</title>
-      <!--Import Google Icon Font-->
-      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!--Import materialize.css-->
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
-
-    <!--     Compiled and minified JavaScript-->
-
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
+    {% load static %}
     <!--<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>-->
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>-->
-    {% load static %}
+
 </head>
 
     <body class="grey lighten-4" >
@@ -25,34 +19,19 @@
     </div>
 
 
-    <div class="nav-wrapper  ">
-    <nav>
-        <div class="nav-wrapper grey darken-4">
-            <a href="/product" class="brand-logo">BookStore</a>
-            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-
-            <div class="right hide-on-med-and-down">
-                <ul>
-                <li><a href="/home">Home</a></li>
-                </ul>
-            </div>
-            <div class="right hide-on-med-and-down">
-                <form method="POST" action="/book/search">
-                    <div class="input-field">
-                        <input id="search" name="search" type="search" required>
-                        <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                        <i class="material-icons">close</i>
-                    </div>
-                </form>
-            </div>
-
-            <ul  class="side-nav" id="mobile-demo">
-                <li><a href="/home">Home</a></li>
-                <li><a href="/book">my books</a></li>
-                <li><a href="/author">my authors</a></li>
-            </ul>
-        </div>
-    </nav>
+<div class="ui menu">
+  <div class="item">
+    <div class="ui icon input">
+      <input type="text" placeholder="Search...">
+      <i class="search icon"></i>
+    </div>
+  </div>
+  <div class="right item">
+    <div class="ui action input">
+      <input type="text" placeholder="Navigate to...">
+      <div class="ui button">Go</div>
+    </div>
+  </div>
 </div>
 
 
@@ -67,36 +46,20 @@
 
 
 
-<style>
-    footer {
-        display: flex;
-        min-height:30vh;
-        flex-direction: column;
-    }
-
-    main {
-        flex: 1 0 auto;
-    }
-</style>
 
 
 
 
 </div >
-<footer class="page-footer grey darken-4">
-    <div class="footer-copyright grey darken-4  ">
-        <div class="container  grey darken-4">
-            © 2017 Copyright Text
-            <a class="grey-text text-lighten-4 right" href="http://www.iti.gov.eg/">Information Technology Institute</a>
-        </div>
-    </div>
-
-</footer>
 
 
-          <!--Import jQuery before materialize.js-->
-      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
 
+
+      <script
+      src="https://code.jquery.com/jquery-3.1.1.min.js"
+      integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+      crossorigin="anonymous"></script>
+    <script src="semantic/dist/semantic.min.js"></script>
+      {% block javascript %}{% endblock %}
     </body>
   </html>
