--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -8,6 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
     {% load static %}
+        {% block css %}{% endblock %}
     <!--<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>-->
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>-->
 
@@ -18,21 +19,18 @@
         <img src='{% static "store/imgs/boo4.png" %}' >
     </div>
 
+    {%if registered%}
+    <div class="ui menu">
+      <div class="right item">
+        <div class="ui icon input">
+          <input type="text" placeholder="Search...">
+          <i class="search icon"></i>
+        </div>
+      </div>
 
-<div class="ui menu">
-  <div class="item">
-    <div class="ui icon input">
-      <input type="text" placeholder="Search...">
-      <i class="search icon"></i>
     </div>
-  </div>
-  <div class="right item">
-    <div class="ui action input">
-      <input type="text" placeholder="Navigate to...">
-      <div class="ui button">Go</div>
-    </div>
-  </div>
-</div>
+
+    {%endif%}
 
 
 
