--- a/store/templates/login.html
+++ b/store/templates/login.html
@@ -1,18 +1,72 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-</head>
-<body>
-    <h1>Login to BookStore</h1>
-    <form id="login_form" method="post" action="store/login">
+{% extends "base.html" %}
+{% block title %}Login{% endblock %}
+{% block css %}
+      <style type="text/css">
+    body {
+      background-color: #DADADA;
+    }
+    body > .grid {
+      height: 100%;
+    }
+    .image {
+      margin-top: -100px;
+    }
+    .column {
+      max-width: 450px;
+    }
+  </style>
+{% endblock %}
+{% block body %}
+<div class="ui middle aligned center aligned grid">
+  <div class="column">
+    <h2 class="ui teal image header">
+
+      <div class="content">
+        Log-in to your account
+      </div>
+    </h2>
+    <form class="ui large form" id="login_form" method="post" action="/store/login/">
         {%csrf_token%}
-        Email :<input type="text" name="email">
-        <br/>
-        Password :<input type="password" name="password">
-        <br/>
-        <input type="submit" value="submit">
+      <div class="ui stacked segment">
+        <div class="field">
+          <div class="ui left icon input">
+            <i class="user icon"></i>
+            <input type="text" name="username" placeholder="User name">
+          </div>
+        </div>
+        <div class="field">
+          <div class="ui left icon input">
+            <i class="lock icon"></i>
+            <input type="password" name="password" placeholder="Password">
+          </div>
+        </div>
+        <div ><button class="ui fluid large teal submit button" type="submit">Login</button></div>
+      </div>
+        {% if error_msg %}
+      <div class="ui error message" style="display: block;">
+        {{error_msg}}
+      </div>
+        {% endif %}
+
     </form>
-</body>
-</html>
+
+    <div class="ui message">
+      New to us? <a href="/store/register/">Sign Up</a>
+    </div>
+  </div>
+</div>
+    <!--<form class="ui form" id="login_form" method="post" action="/store/login/">-->
+        <!--{%csrf_token%}-->
+  <!--<div class="field">-->
+    <!--<label> Email :</label>-->
+    <!--<input type="text" name="username" placeholder="username">-->
+  <!--</div>-->
+  <!--<div class="field">-->
+    <!--<label> Password :</label>-->
+    <!--<input type="password" name="password" placeholder="Password">-->
+  <!--</div>-->
+
+  <!--<button class="ui button" type="submit">Submit</button>-->
+<!--</form>-->
+{% endblock %}
+{% block javascript %}{% endblock %}
