--- a/store/templates/books.html
+++ b/store/templates/books.html
@@ -1,32 +1,72 @@
 {% extends "base.html" %}
+{% load store_bookstatues %}
 {% block title %} Student Page{% endblock %}
 {% block body %}
-<div class="row">
-<div class="ui four cards">
-{% for b in books %}
 
-
-      <div class="card">
-        <div class="image">
-          <img src="{{b.cover.url}}">
-        </div>
-        <div class="extra">
-
-          Rating:
-          <div class="ui star rating" data-rating="5"></div>
-        </div>
-      </div>
-{% empty %}
- No Books in the List
-{% endfor %}
+    <div class="ui vertical menu">
+  <div class="ui dropdown item">
+    Categories
+    <i class="dropdown icon"></i>
+    <div class="menu">
+      <a class="item">Electronics</a>
+      <a class="item">Automotive</a>
+      <a class="item">Home</a>
+    </div>
+  </div>
 </div>
+
+    <div class="row">
+        <div class="ui four cards">
+            {% for b in books %}
+
+
+                <div class="card">
+                    <div class="image">
+                        <img src="{{ b.cover.url }}">
+                    </div>
+                    <div class="extra">
+
+                        Rating:
+                        <div class="ui star rating" data-rating="5"></div>
+
+                    </div>
+
+                    <div class="ui dropdown item">
+                        <i class="dropdown icon"></i>
+                        {% if   b.s %}
+
+                                <a href="/store/book/{{ b.id }}/{{ b.s.statues }}">
+                                {% if b.s.statues == "0" %}
+                                Read
+                                {% elif b.s.statues == "1" %}
+                                    Currently Reading
+                                {% else %}
+                                    Want to Read
+                                {% endif %}
+                                </a>
+                        {% else %}
+                            <a href="/store/book/{{ b.id }}/2">Want to Read</a>
+                        {% endif %}
+
+                        <div class="menu">
+                            <div class="header">Do it</div>
+                            <a class="item" href="/store/book/{{ b.id }}/{{ 0 }}" >Read</a>
+                            <a class="item" href="/store/book/{{ b.id }}/{{ 1 }}">Currently Reading</a>
+                            <a class="item" href="/store/book/{{ b.id }}/{{ 2 }}">Want to Read</a>
+                        </div>
+                    </div>
+                </div>
+            {% empty %}
+                No Books in the List
+            {% endfor %}
+        </div>
     </div>
 
 {% endblock %}
 {% block javascript %}
-  <script>
+    <script>
         $('.ui.rating')
-          .rating()
+            .rating()
         ;
-  </script>
+    </script>
 {% endblock %}
