--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -13,13 +13,7 @@
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>-->
 
 </head>
-
-    <body class="grey lighten-4" >
-    <div style="text-align: center">
-        <img src='{% static "store/imgs/boo4.png" %}' >
-    </div>
-
-    {%if registered%}
+        {%if user.is_authenticated%}
     <div class="ui menu">
       <div class="right item">
         <div class="ui icon input">
@@ -31,6 +25,40 @@
     </div>
 
     {%endif%}
+
+    <body class="grey lighten-4" >
+    <div style="text-align: center">
+        <img src='{% static "store/imgs/boo4.png" %}' >
+    </div>
+
+
+    <div class="ui secondary  menu">
+      <a class="active item">
+        Home
+      </a>
+        {%if user.is_authenticated%}
+        <a class="item">
+        My Area
+      </a>
+        {%endif%}
+      <a class="item">
+        Library
+      </a>
+      <a class="item">
+        Authors
+      </a>
+      <div class="right menu">
+        <div class="item">
+          <div class="ui icon input">
+            <input type="text" placeholder="Search...">
+            <i class="search link icon"></i>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+
 
 
 
