--- a/store/templates/books.html
+++ b/store/templates/books.html
@@ -3,16 +3,12 @@
 {% block title %} Student Page{% endblock %}
 {% block body %}
 
-    <div class="ui vertical menu">
-  <div class="ui dropdown item">
-    Categories
-    <i class="dropdown icon"></i>
-    <div class="menu">
-      <a class="item">Electronics</a>
-      <a class="item">Automotive</a>
-      <a class="item">Home</a>
-    </div>
-  </div>
+
+<div class="ui four column grid">
+  <div class="column">1</div>
+  <div class="column">2</div>
+  <div class="column">3</div>
+  <div class="column">4</div>
 </div>
 
     <div class="row">
@@ -27,35 +23,37 @@
                     <div class="extra">
 
                         Rating:
-                        <div class="ui star rating" data-rating="5"></div>
-
+                        <div id="{{ b.id }}" class="ui star rating" data-rating="{{ b.r.rate }}"></div>
+                        rated :{{ b.avg.rate__avg  }}  count {{ b.count }}
                     </div>
 
-                    <div class="ui dropdown item">
-                        <i class="dropdown icon"></i>
-                        {% if   b.s %}
+                    <div class="ui compact menu">
+                        <div class="ui simple dropdown item">
+                            {% if   b.s %}
 
-                                <a href="/store/book/{{ b.id }}/{{ b.s.statues }}">
-                                {% if b.s.statues == "0" %}
-                                Read
-                                {% elif b.s.statues == "1" %}
-                                    Currently Reading
-                                {% else %}
-                                    Want to Read
-                                {% endif %}
+                                <a class="statue_{{ b.id }}" >
+                                    {% if b.s.statues == "0" %}
+                                        Read
+                                    {% elif b.s.statues == "1" %}
+                                        Currently Reading
+                                    {% else %}
+                                        Want to Read
+                                    {% endif %}
                                 </a>
-                        {% else %}
-                            <a href="/store/book/{{ b.id }}/2">Want to Read</a>
-                        {% endif %}
-
-                        <div class="menu">
-                            <div class="header">Do it</div>
-                            <a class="item" href="/store/book/{{ b.id }}/{{ 0 }}" >Read</a>
-                            <a class="item" href="/store/book/{{ b.id }}/{{ 1 }}">Currently Reading</a>
-                            <a class="item" href="/store/book/{{ b.id }}/{{ 2 }}">Want to Read</a>
+                            {% else %}
+                                <a class="statue_{{ b.id }}" href="/store/book/{{ b.id }}/2">Want to Read</a>
+                            {% endif %}
+                            <i class="dropdown icon"></i>
+                            <div id="statues_menu" class="menu">
+                                <a class="item" onclick="changeState({{ b.id }},0)" >Read</a>
+                                <a class="item" onclick="changeState({{ b.id }},1)"  >Currently Reading</a>
+                                <a class="item" onclick="changeState({{ b.id }},2)"  >Want to Read</a>
+                            </div>
                         </div>
                     </div>
+
                 </div>
+
             {% empty %}
                 No Books in the List
             {% endfor %}
@@ -66,7 +64,24 @@
 {% block javascript %}
     <script>
         $('.ui.rating')
-            .rating()
-        ;
+            .rating('setting', 'onRate', function(value ) {
+            $.ajax({
+                url: "/store/book/rate/"+this.id+"/"+value,
+                context: document.body,
+                success: function (data) {
+                    console.log("done")
+                }
+            });
+            });
+
+        function changeState(book_id , statu) {
+            $.ajax({
+                url: "/store/book/"+book_id+"/"+statu,
+                context: document.body,
+                success: function (data) {
+                    $('.statue_'+book_id).text(data.statue);
+                }
+            });
+        }
     </script>
 {% endblock %}
