add home + myArea + enhance ui

--- a/store/templates/login.html
+++ b/store/templates/login.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "baseNoHeader.html" %}
 {% block title %}Login{% endblock %}
 {% block css %}
       <style type="text/css">
