--- a/store/templates/baseNoHeader.html
+++ b/store/templates/baseNoHeader.html
@@ -72,41 +72,17 @@
     </div>
 {%endif%}
 <div style="text-align: center">
-    <img  class="ui medium image" style="display: inline-block;" src='{% static "store/imgs/boo4.png" %}'>
+    <img src='{% static "store/imgs/boo4.png" %}'>
 </div>
 
 
-<div class="ui  menu">
-    <a class=" item" href="/store/home/">
-        Home
-    </a>
-    {%if user.is_authenticated%}
-    <a class="item" href="/store/myArea/">
-        My Area
-    </a>
-    {%endif%}
-    <a class="item" href="/store/book/">
-        Library
-    </a>
-    <a class="item" href="/store/author/">
-        Authors
-    </a>
-    <div class="right menu">
-        <div class="item">
-            <div class="ui icon input">
-                <input type="text" placeholder="Search...">
-                <i class="search link icon"></i>
-            </div>
-        </div>
 
-    </div>
-</div>
 
 
 <div id="bodyblock" class="container" style="min-height: 32.5em;">
 
 
-    {% block body %} Student Name {% endblock %}
+    {% block body %}  {% endblock %}
 
 
 </div>
