--- a/store/templates/books.html
+++ b/store/templates/books.html
@@ -3,24 +3,24 @@
 {% block title %} Student Page{% endblock %}
 {% block body %}
 
-    <div class="ui vertical menu">
-  <div class="ui dropdown item">
-    Categories
-    <i class="dropdown icon"></i>
-    <div class="menu">
-      <a class="item">Electronics</a>
-      <a class="item">Automotive</a>
-      <a class="item">Home</a>
-    </div>
-  </div>
-</div>
+    <!--<div class="ui vertical menu">-->
+  <!--<div class="ui dropdown item">-->
+    <!--Categories-->
+    <!--<i class="dropdown icon"></i>-->
+    <!--<div class="menu">-->
+      <!--<a class="item">Electronics</a>-->
+      <!--<a class="item">Automotive</a>-->
+      <!--<a class="item">Home</a>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</div>-->
 
     <div class="row">
         <div class="ui four cards">
             {% for b in books %}
 
 
-                <div class="card">
+                <div class="ui card">
                     <div class="image">
                         <img src="{{ b.cover.url }}">
                     </div>
