--- a/store/templates/register.html
+++ b/store/templates/register.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "baseNoHeader.html" %}
 {% block title %}Register{% endblock %}
     <{% block css %}
       <style type="text/css">
