--- a/store/templates/home.html
+++ b/store/templates/home.html
@@ -108,7 +108,7 @@
                                     </div>
                                 </div>
                                 {% empty %}
-                                No Books in the List
+                                You did'nt follow any author yet
                                 {% endfor %}
                             </div>
                         </div>
