--- a/store/templates/home.html
+++ b/store/templates/home.html
@@ -20,38 +20,38 @@
                                         <div class="image">
                                             <img src="{{ b.cover.url }}">
                                         </div>
-                                        <div class="extra">
+                    <div class="extra">
 
-                                            Rating:
-                                            <div class="ui star rating" data-rating="5"></div>
+                        Rating:
+                        <div id="{{ b.id }}" class="ui star rating" data-rating="{{ b.r.rate }}"></div>
+                        rated :{{ b.avg.rate__avg  }}  count {{ b.count }}
+                    </div>
 
-                                        </div>
+                    <div class="ui compact menu">
+                        <div class="ui simple dropdown item">
+                            {% if   b.s %}
 
-                                        <div class="ui dropdown item">
-                                            <i class="dropdown icon"></i>
-                                            {% if b.s %}
+                                <a class="statue_{{ b.id }}" >
+                                    {% if b.s.statues == "0" %}
+                                        Read
+                                    {% elif b.s.statues == "1" %}
+                                        Currently Reading
+                                    {% else %}
+                                        Want to Read
+                                    {% endif %}
+                                </a>
+                            {% else %}
+                                <a class="statue_{{ b.id }}" href="/store/book/{{ b.id }}/2">Want to Read</a>
+                            {% endif %}
+                            <i class="dropdown icon"></i>
+                            <div id="statues_menu" class="menu">
+                                <a class="item" onclick="changeState({{ b.id }},0)" >Read</a>
+                                <a class="item" onclick="changeState({{ b.id }},1)"  >Currently Reading</a>
+                                <a class="item" onclick="changeState({{ b.id }},2)"  >Want to Read</a>
+                            </div>
+                        </div>
+                    </div>
 
-                                            <a href="/store/book/{{ b.id }}/{{ b.s.statues }}">
-                                                {% if b.s.statues == "0" %}
-                                                Read
-                                                {% elif b.s.statues == "1" %}
-                                                Currently Reading
-                                                {% else %}
-                                                Want to Read
-                                                {% endif %}
-                                            </a>
-                                            {% else %}
-                                            <a href="/store/book/{{ b.id }}/2">Want to Read</a>
-                                            {% endif %}
-
-                                            <div class="menu">
-                                                <div class="header">Do it</div>
-                                                <a class="item" href="/store/book/{{ b.id }}/{{ 0 }}">Read</a>
-                                                <a class="item" href="/store/book/{{ b.id }}/{{ 1 }}">Currently
-                                                    Reading</a>
-                                                <a class="item" href="/store/book/{{ b.id }}/{{ 2 }}">Want to Read</a>
-                                            </div>
-                                        </div>
                                     </div>
                                 </div>
                                 {% empty %}
@@ -120,7 +120,7 @@
         </div>
     </div>
 
-
+</div>
     {% endblock %}
     {% block javascript %}
     <script>
