--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -121,6 +121,54 @@
 <script>$('.ui.dropdown')
   .dropdown();
 </script>
+
+    <script>
+        $('.ui.rating')
+            .rating('setting', 'onRate', function(value ) {
+            $.ajax({
+                url: "/store/book/rate/"+this.id+"/"+value,
+                context: document.body,
+                success: function (data) {
+                    console.log("done")
+                }
+            });
+            });
+
+        function changeState(book_id , statu) {
+            $.ajax({
+                url: "/store/book/"+book_id+"/"+statu,
+                context: document.body,
+                success: function (data) {
+                    $('.statue_'+book_id).text(data.statue);
+                }
+            });
+        }
+    </script>
+
+
 {% block javascript %}{% endblock %}
+    <script>
+        $('.ui.rating')
+            .rating('setting', 'onRate', function(value ) {
+            $.ajax({
+                url: "/store/book/rate/"+this.id+"/"+value,
+                context: document.body,
+                success: function (data) {
+                    console.log("done")
+                }
+            });
+            });
+
+        function changeState(book_id , statu) {
+            $.ajax({
+                url: "/store/book/"+book_id+"/"+statu,
+                context: document.body,
+                success: function (data) {
+                    $('.statue_'+book_id).text(data.statue);
+                }
+            });
+        }
+    </script>
+
 </body>
 </html>
