--- a/store/templates/books.html
+++ b/store/templates/books.html
@@ -1,61 +1,80 @@
 {% extends "base.html" %}
 {% load store_bookstatues %}
-{% block title %} Student Page{% endblock %}
+{% block title %}Libarary{% endblock %}
 {% block body %}
 
 
-
+<div class="ui grid">
     <div class="row">
-        <div class="ui four cards">
-            {% for b in books %}
+        <div class="one wide column"></div>
+        <div class="fourteen wide column">
+            <div class="ui segments">
+                <div class="ui segment">
+                    <h3>Top Rated Books</h3>
+                    <div class="ui segment">
+                        <div class="row">
+                            <div class="ui grid">
+                                {% for b in books %}
 
+                                <div class="three wide column">
+                                    <div class="ui card">
+                                        <div class="image">
+                                            <img src="{{ b.cover.url }}">
+                                        </div>
+                                        <div class="extra">
 
-                <div class="ui card">
-                    <div class="image">
-                        <img src="{{ b.cover.url }}">
-                    </div>
-                    <div class="extra">
+                                            Rating:
+                                            <div id="{{ b.id }}" class="ui star rating"
+                                                 data-rating="{{ b.r.rate }}"></div>
+                                            rated :{{ b.avg.rate__avg }} count {{ b.count }}
+                                        </div>
 
-                        Rating:
-                        <div id="{{ b.id }}" class="ui star rating" data-rating="{{ b.r.rate }}"></div>
-                        rated :{{ b.avg.rate__avg  }}  count {{ b.count }}
-                    </div>
+                                        <div class="ui compact menu">
+                                            <div class="ui simple dropdown item">
+                                                {% if b.s %}
 
-                    <div class="ui compact menu">
-                        <div class="ui simple dropdown item">
-                            {% if   b.s %}
+                                                <a class="statue_{{ b.id }}">
+                                                    {% if b.s.statues == "0" %}
+                                                    Read
+                                                    {% elif b.s.statues == "1" %}
+                                                    Currently Reading
+                                                    {% else %}
+                                                    Want to Read
+                                                    {% endif %}
+                                                </a>
+                                                {% else %}
+                                                <a class="statue_{{ b.id }}" href="/store/book/{{ b.id }}/2">Want to
+                                                    Read</a>
+                                                {% endif %}
+                                                <i class="dropdown icon"></i>
+                                                <div id="statues_menu" class="menu">
+                                                    <a class="item" onclick="changeState({{ b.id }},0)">Read</a>
+                                                    <a class="item" onclick="changeState({{ b.id }},1)">Currently
+                                                        Reading</a>
+                                                    <a class="item" onclick="changeState({{ b.id }},2)">Want to Read</a>
+                                                </div>
+                                            </div>
+                                        </div>
 
-                                <a class="statue_{{ b.id }}" >
-                                    {% if b.s.statues == "0" %}
-                                        Read
-                                    {% elif b.s.statues == "1" %}
-                                        Currently Reading
-                                    {% else %}
-                                        Want to Read
-                                    {% endif %}
-                                </a>
-                            {% else %}
-                                <a class="statue_{{ b.id }}" href="/store/book/{{ b.id }}/2">Want to Read</a>
-                            {% endif %}
-                            <i class="dropdown icon"></i>
-                            <div id="statues_menu" class="menu">
-                                <a class="item" onclick="changeState({{ b.id }},0)" >Read</a>
-                                <a class="item" onclick="changeState({{ b.id }},1)"  >Currently Reading</a>
-                                <a class="item" onclick="changeState({{ b.id }},2)"  >Want to Read</a>
+                                    </div>
+                                </div>
+
+                                {% empty %}
+                                No Books in the List
+                                {% endfor %}
                             </div>
                         </div>
+
                     </div>
 
                 </div>
-
-            {% empty %}
-                No Books in the List
-            {% endfor %}
+            </div>
         </div>
+
     </div>
 
-{% endblock %}
-{% block javascript %}
+    {% endblock %}
+    {% block javascript %}
     <script>
         $('.ui.rating')
             .rating('setting', 'onRate', function(value ) {
@@ -77,5 +96,6 @@
                 }
             });
         }
+
     </script>
-{% endblock %}
+    {% endblock %}
