--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -28,32 +28,12 @@
         <span>{{user.username}}</span>
     </div>
     <div class="right item">
-        <div class=" right  ui icon  pointing dropdown button">
-            <i class="alarm icon"></i>
-            <div class="menu">
+        <div id='notify'class=" right  ui icon  pointing dropdown button">
+            <i id='icon'class="alarm mute outline icon"></i>
+            <div id="msgs" class="menu">
                 <div class="header">Display Density</div>
                 <div class="item">Comfortable</div>
-                <div class="item">Cozy</div>
-                <div class="item">Compact</div>
-                <div class="ui divider"></div>
-                <div class="item">Settings</div>
-                <div class="item">
-                    <i class="dropdown icon"></i>
-                    <span class="text">Upload Settings</span>
-                    <div class="menu">
-                        <div class="item">
-                            <i class="check icon"></i>
-                            Convert Uploaded Files to PDF
-                        </div>
-                        <div class="item">
-                            <i class="check icon"></i>
-                            Digitize Text from Uploaded Files
-                        </div>
-                    </div>
-                </div>
-                <div class="item">Manage Apps</div>
-                <div class="item">Keyboard Shortcuts</div>
-                <div class="item">Help</div>
+
             </div>
         </div>
     </div>
@@ -106,7 +86,7 @@
 <div id="bodyblock" class="container" style="min-height: 32.5em;">
 
 
-    {% block body %} Student Name {% endblock %}
+    {% block body %}  {% endblock %}
 
 
 </div>
@@ -122,5 +102,53 @@
   .dropdown();
 </script>
 {% block javascript %}{% endblock %}
+    <script>
+
+        $('.ui.rating')
+            .rating()
+        ;
+
+            function doPolling(){
+            $.ajax({
+            method: 'get',
+            async: true,
+            url: '/store/book/notify/'+books_num,
+
+            success: function(res){
+            if(res.books>books_num){
+                console.log("new books")
+                $('#icon').attr('class','alarm icon')
+                $("#msgs").append('<div class="item">new books avalibale</div>');
+            }else{console.log("no new books")}
+
+            setTimeout(doPolling,10000);
+            }
+            })
+            }
+    doPolling()
+                function Polling(){
+            $.ajax({
+            method: 'get',
+            async: true,
+            url: '/store/author/notify/'+authors_num,
+
+            success: function(res){
+            if(res.authors>authors_num){
+                console.log("new authors")
+                 $('#icon').attr('class','alarm icon')
+                 $("#msgs").append('<div class="item">new authors avalible</div>');
+            }else{console.log("no new authors")}
+            setTimeout(Polling,10000);
+            }
+            })
+            }
+    Polling()
+    $("#notify").click(function(){
+    $('#icon').attr('class','alarm mute outline icon')
+    $("#msgs").empty();
+});
+
+    </script>
+
 </body>
 </html>
