--- a/store/templates/home.html
+++ b/store/templates/home.html
@@ -119,31 +119,12 @@
             </div>
         </div>
     </div>
-
+  </div>
 
     {% endblock %}
     {% block javascript %}
-    <script>
-        $('.ui.rating')
-            .rating()
-        ;
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </script>
+<script>
+      books_num={{books_num}}
+authors_num={{authors_num}}
+</script>
     {% endblock %}
